fix the path reference to main class and runtest arguments