@@ -13,7 +13,7 @@ then
 fi
 
 # compile the code into the bin folder, terminates if error occurred
-if ! javac -cp ../src/main/java -Xlint:none -d ../bin ../src/main/java/*.java
+if ! javac --module-path ~/Downloads/javafx-sdk-17.0.2/lib --add-modules javafx.controls,javafx.fxml -cp ../src/main/java -Xlint:none -d ../bin ../src/main/java/dooke/*.java
 then
     echo "********** BUILD FAILURE **********"
     exit 1
